objects/Product_Hierarchy__c.object
<CustomObject>
    <description>This objects contains the product hierarchy from GPL to CBC1.</description>
    <fields>
        <fullName>Approver_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBC1_Description__c</fullName>
        <description>This field contains the CBC1 Description</description>
        <label>CBC1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC1__c</fullName>
        <description>This field contains the CBC1 code.</description>
        <label>CBC1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Description__c</fullName>
        <description>This field contains the CBC2 description.</description>
        <label>CBC2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <description>This field contains the CBC2 code.</description>
        <label>CBC2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Description__c</fullName>
        <description>This field contains the CBC3 description.</description>
        <label>CBC3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3__c</fullName>
        <description>This field contains the CBC3 code.</description>
        <label>CBC3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSD_EGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engineering global manager for consumer device &amp; APL</description>
        <label>Engineering General Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSD_GPL_Family__c</fullName>
        <description>CSD GPL Family</description>
        <formula>IF(CBC1__c = &quot;41298&quot; , (if(ISBLANK(CBC2_Description__c),&quot;Others&quot;,CBC2_Description__c )), &quot;Other-BU&quot;)</formula>
        <inlineHelpText>CSD GPL Family</inlineHelpText>
        <label>CSD GPL Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND_Product_Family__c</fullName>
        <description>Product Family used in DND, slightly different from CBC3 with shorter name.(for DND Optics - Active and DND Optics - Passive, rename as Optics, for other CBC3, rename as Various non-DND)</description>
        <formula>IF(CBC1__c = &quot;41298&quot;, CASE( CBC3__c , &quot;41304&quot;, &quot;RF&quot;, &quot;41305&quot;, &quot;RF&quot;, &quot;41306&quot;, &quot;C/A&quot;, &quot;41308&quot;, &quot;I/O&quot;, &quot;41310&quot;, &quot;Board to Board&quot;, &quot;41311&quot;, &quot;Cable Applied&quot;, &quot;41312&quot;, &quot;Power&quot;, &quot;41313&quot;, &quot;Optics&quot;, &quot;41314&quot;, &quot;Optics&quot;, &quot;41384&quot;, &quot;Cards&quot;,&quot;41386&quot;, &quot;Board to Board&quot;,&quot;41438&quot;, &quot;RF&quot;,&quot;41441&quot;, &quot;Cable Applied&quot;,&quot;41442&quot;, &quot;Sockets&quot;, &quot;Various non-DND&quot;), &quot;Various non-DND&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DND Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDI_Classification__c</fullName>
        <description>This field contains the GDI Classification.</description>
        <label>GDI Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Invest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPL_Description__c</fullName>
        <description>This field contains the GPL Description.</description>
        <label>GPL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Record__c</fullName>
        <description>This field calculates to 1 if the length of the field &apos;Hierarchy Detail&apos; is exactly 3 other wise it evaluates to 0.
This will we used to determine if the record represents a GPL or a CBC record.</description>
        <formula>IF( LEN( TRIM(Name) ) = 3, 1, 0)</formula>
        <label>GPL_Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_PM_Network_ID__c</fullName>
        <formula>Product_Manager__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global PM Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level_Type__c</fullName>
        <label>Hierarchy Level Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPL</fullName>
                </value>
                <value>
                    <fullName>CBC5</fullName>
                </value>
                <value>
                    <fullName>CBC4</fullName>
                </value>
                <value>
                    <fullName>CBC3</fullName>
                </value>
                <value>
                    <fullName>CBC2</fullName>
                </value>
                <value>
                    <fullName>CBC1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_New__c</fullName>
        <label>IND New</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_product_ownership__c</fullName>
        <description>compares if user is owner of a GPL as global PM (product manager) or regional PM.</description>
        <formula>IF(OR(CONTAINS( Global_PM_Network_ID__c , $User.Te_Network_Id__c),
CONTAINS( Regional_PM_AP_Network_ID__c , $User.Te_Network_Id__c),
CONTAINS( Regional_PM_EU_Network_ID__c , $User.Te_Network_Id__c),
CONTAINS( Regional_PM_US_Network_ID__c , $User.Te_Network_Id__c))
, &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My product ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BU__c</fullName>
        <description>This field contains the product BU</description>
        <label>Product BU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Leader_Network_ID__c</fullName>
        <formula>Product_Manager__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Leader Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field contains the Product Family.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_AP_Network_ID__c</fullName>
        <formula>Regional_PM_AP__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM AP Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_AP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM AP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_AP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_China__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM China</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_China</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_EU_Network_ID__c</fullName>
        <formula>Regional_PM_EU__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM EU Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_EU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM EU</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_India_Network_ID__c</fullName>
        <formula>Regional_PM_India__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM India Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_India__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM India</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_India</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_Japan_Network_ID__c</fullName>
        <formula>Regional_PM_Japan__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM Japan Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_Japan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM Japan</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_Japan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_US_Network_ID__c</fullName>
        <formula>Regional_PM_US__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM US Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM US</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_PM_US</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Hierarchy</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Unique_Key__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <columns>GPL_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ADM</fullName>
        <columns>NAME</columns>
        <columns>GDI_Classification__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Regional_PM_AP__c</columns>
        <columns>Regional_PM_EU__c</columns>
        <columns>Regional_PM_US__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CBC2__c</columns>
        <columns>CBC3__c</columns>
        <columns>CBC4__c</columns>
        <columns>CBC4_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1_Description__c</field>
            <operation>contains</operation>
            <value>Aero</value>
        </filters>
        <label>All ADM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_APL</fullName>
        <columns>CBC2_Description__c</columns>
        <columns>NAME</columns>
        <columns>CBC3__c</columns>
        <columns>GDI_Classification__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Regional_PM_AP__c</columns>
        <columns>Regional_PM_EU__c</columns>
        <columns>Regional_PM_US__c</columns>
        <columns>CBC1_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1_Description__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <label>All APL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CSD_GPL</fullName>
        <columns>CSD_GPL_Family__c</columns>
        <columns>Product_Family__c</columns>
        <columns>NAME</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Approver_PM__c</columns>
        <columns>CSD_EGM__c</columns>
        <columns>GDI_Classification__c</columns>
        <columns>GPL_Record__c</columns>
        <columns>Hierarchy_Level_Type__c</columns>
        <columns>CBC2_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1__c</field>
            <operation>equals</operation>
            <value>30002</value>
        </filters>
        <label>All CSD GPL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Datacomm</fullName>
        <columns>NAME</columns>
        <columns>GDI_Classification__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Regional_PM_AP__c</columns>
        <columns>Regional_PM_EU__c</columns>
        <columns>Regional_PM_US__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CBC4_Description__c</columns>
        <columns>CBC5_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1_Description__c</field>
            <operation>equals</operation>
            <value>Data Communications</value>
        </filters>
        <label>All Datacomm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Industrial</fullName>
        <columns>NAME</columns>
        <columns>CBC4__c</columns>
        <columns>CBC4_Description__c</columns>
        <columns>IND_New__c</columns>
        <columns>Global_PM__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1__c</field>
            <operation>equals</operation>
            <value>30004</value>
        </filters>
        <label>All Industrial</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Medical</fullName>
        <columns>NAME</columns>
        <columns>GPL_Description__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Regional_PM_AP__c</columns>
        <columns>Regional_PM_EU__c</columns>
        <columns>Regional_PM_US__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC1__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CBC2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1_Description__c</field>
            <operation>contains</operation>
            <value>Medical</value>
        </filters>
        <label>All Medical</label>
    </listViews>
    <listViews>
        <fullName>Application_Tooling_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>CBC1__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>GPL_Description__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1__c</field>
            <operation>equals</operation>
            <value>10011</value>
        </filters>
        <label>Application Tooling Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ICT_Product_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>GPL_Description__c</columns>
        <columns>Description__c</columns>
        <columns>CBC1__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CBC3__c</columns>
        <columns>CBC3_Description__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1__c</field>
            <operation>equals</operation>
            <value>13069</value>
        </filters>
        <label>ICT Product Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sensors_Product_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>GPL_Description__c</columns>
        <columns>CBC1__c</columns>
        <columns>CBC1_Description__c</columns>
        <columns>CBC2__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CBC3__c</columns>
        <columns>CBC3_Description__c</columns>
        <columns>CBC4__c</columns>
        <columns>CBC4_Description__c</columns>
        <columns>Global_PM__c</columns>
        <columns>Global_PM_Network_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBC1__c</field>
            <operation>equals</operation>
            <value>41215</value>
        </filters>
        <label>Sensors Product Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GPL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Hierarchies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>